--- a/pages/instrumentBoard/instrumentBoard.wxss
+++ b/pages/instrumentBoard/instrumentBoard.wxss
@@ -65,6 +65,8 @@
 .helloDevice{
   margin-top: 2%;
   margin-left: 10%;
+  display: flex;
+  flex-direction: column;
 }
 .helloDevice1{
   font-weight:lighter;
@@ -583,8 +585,8 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  height: 30%;
-  margin-top: 3%;
+  height: 25%;
+  margin-top: 1%;
 }
 .pleaseTitle{
   font-size: 36rpx;
@@ -615,7 +617,7 @@
 .registerButton1{
   background-color: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  width: 50%;margin-top: 5%;
+  width: 50%;margin-top: 3%;
   height: 15%;
   display: flex;
   align-items: center;
@@ -625,7 +627,7 @@
 .registerButton{
   background-color: yellowgreen;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  width: 50%;margin-top: 5%;
+  width: 50%;margin-top: 3%;
   height: 15%;
   display: flex;
   align-items: center;
@@ -643,3 +645,8 @@
   color: white;
 }
 /*主页板块e*/
+.textButton{
+  background-color: #9ACD32;
+  width: 50%;
+  margin-top: 40rpx;
+}
